[tool.poetry]
name = "cryptography_playground"
version = "0.1.0"
description = ""
authors = ["Ryan Sobol <hello@ryansobol.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
